Basically made a lot of changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,6 @@
 @import "bootstrap";
 @import "global_styles";
 @import "font-awesome";
+@import "chosen";
+@import "bootstrap-chosen";
+@import "styles";
