--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -21,7 +21,7 @@
   }
 
   .article-type-main{
-    background-color: #ff7361;
+    background-color: #dec3bf;
     font-size: 11px;
     margin: 0;
     display: inline-block;
