--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,14 +7,14 @@
 
     <div class="row">
       <div class="col-lg-12">
-        <h3 class="page-header"><i class="fa fa-file-text-o"></i> Articles posted by you</h3>
+        <h3 class="page-header"><i class="fa fa-file-text-o"></i> Recipes posted by you</h3>
       </div>
     </div>
     <div class = "col-md-10">
       <% @articles.each do |article| %>
           <article class = "article article-type-normal">
             <h2><%= article.title.html_safe %></h2>
-            <div class = "article-type-main"><i class = "fa fa-question-circle"></i>  Question</div>
+            <div class = "article-type-main"><i class = "fa fa-cutlery"></i> <%=article.cuisine.name%></div>
 
             <div class = "article-inner">
               <div class = "clearfix"></div>
@@ -22,7 +22,7 @@
               <div class="article-details">
                 <span class="article-upvotes"><i class="fa fa-star"></i>5</span>
               </div>
-              <span class="article-date"><i class="fa fa-clock-o"></i>4  mins  ago</span>
+              <span class="article-date"><i class="fa fa-clock-o"></i><%=time_ago_in_words(article.created_at)%> ago</span>
               <span class="article-comment"><a href="#"><i class="fa fa-comments"></i>5  Comments</a></span>
               <div class="clearfix"></div>
             </div>
