--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,10 @@
+<head>
+  <script>
+    $(document).on('turbolinks:load', function() {
+      $('.chosen-select').chosen();
+    });
+  </script>
+</head>
 <section id ='main-content'>
   <section class = 'wrapper'>
     <div class="row">
@@ -25,7 +32,13 @@
               <%=f.label :Cuisine %>
             </div>
             <div>
-              <%= f.select(:cuisine_id, Cuisine.all.collect {|a| [a.name, a.id]}) -%>
+              <%= f.select(:cuisine_id, Cuisine.all.collect {|a| [a.name, a.id]}) %>
+            </div>
+            <div>
+              <%=f.label :Ingredients %>
+            </div>
+            <div>
+              <%= f.select(:ingredients, Ingredient.all.collect {|a| [a.name, a.id]}, {}, {:data => {placeholder:' Choose an Ingredient'},:class => 'chosen-select', multiple: true, display: 'none'}) %>
             </div>
             <div>
               <%= f.submit %>
@@ -35,3 +48,5 @@
     </div>
   </section>
 </section>
+
+<script type="text/javascript" src="chosen/chosen.jquery.min.js"></script>
