--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -81,7 +81,7 @@
                         </div>
                       </div>
                       </div>
-                  <%= end %>
+                  <% end %>
 
 
                 <button class="btn btn-primary btn-block m"><i class="fa fa-arrow-down"></i> Show More</button>
